# backend/routes/registers.go
@@ -10,5 +10,7 @@ func SetUpRegistersRoutes(routes *gin.Engine) {
 	routes.GET("/api/registers", handlers.GetRegisters)
 	routes.POST("/api/registers", handlers.CreateRegister)
 	routes.GET("/api/registers/:uid", handlers.GetRegister)
+	routes.PUT("/api/registers/:uid", handlers.UpdateRegister)
+	routes.DELETE("/api/registers/:uid", handlers.DeleteRegister)
 
 }
